@@ -452,9 +452,6 @@ two keys pressed simultaneously</property>
 		      <property name="xpad">9</property>
 		      <property name="ypad">0</property>
 		      <property name="mnemonic_widget">slowkeys_delay_spin</property>
-		      <accessibility>
-			<atkrelation target="slowkeys_delay_spin" type="label-for"/>
-		      </accessibility>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">1</property>
@@ -732,9 +729,6 @@ two keys pressed simultaneously</property>
 		      <property name="xpad">10</property>
 		      <property name="ypad">0</property>
 		      <property name="mnemonic_widget">bouncekeys_delay_spin</property>
-		      <accessibility>
-			<atkrelation target="bouncekeys_delay_spin" type="label-for"/>
-		      </accessibility>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">1</property>
@@ -911,9 +905,6 @@ two keys pressed simultaneously</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
 		      <property name="mnemonic_widget">mousekeys_max_speed_spin</property>
-		      <accessibility>
-			<atkrelation target="mousekeys_max_speed_spin" type="label-for"/>
-		      </accessibility>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">1</property>
@@ -938,9 +929,7 @@ two keys pressed simultaneously</property>
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
-		      <accessibility>
-			<atkrelation target="mousekeys_init_delay_title" type="label-for"/>
-		      </accessibility>
+		      <property name="mnemonic_widget">mousekeys_init_delay_spin</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">1</property>
@@ -1070,9 +1059,6 @@ two keys pressed simultaneously</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
 		      <property name="mnemonic_widget">mousekeys_accel_time_spin</property>
-		      <accessibility>
-			<atkrelation target="mousekeys_accel_time_spin" type="label-for"/>
-		      </accessibility>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">1</property>
@@ -1198,9 +1184,6 @@ two keys pressed simultaneously</property>
 		      <property name="xpad">2</property>
 		      <property name="ypad">0</property>
 		      <property name="mnemonic_widget">mousekeys_init_delay_spin</property>
-		      <accessibility>
-			<atkrelation target="mousekeys_init_delay_spin" type="label-for"/>
-		      </accessibility>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">3</property>
